tests/compile-fail/suzu_from_duplicate.rs
use suzunari_error::suzunari_error;

#[suzunari_error]
#[suzu(display("error"))]
struct MyError {
    #[suzu(from)]
    #[suzu(from)]
    source: String,
}

fn main() {}
